2015-04-30  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/styleeditor/dialog-style-editor.ui:
	* plugins/actions/styleeditor/styleeditor.cc:
	Fix bug #23470 : Style editor does not permit margins to go over 100 and other problems

2015-04-29  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/Makefile.am:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	* plugins/actions/errorchecking/dialog-error-checking.ui:
	* plugins/actions/errorchecking/errorchecking.h:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/errorchecking/errorcheckingpreferences.h:
	* plugins/actions/errorchecking/maxcharactersperline.h:
	* plugins/actions/errorchecking/maxcharacterspersecond.h:
	* plugins/actions/errorchecking/maxlinepersubtitle.h:
	* plugins/actions/errorchecking/mincharacterspersecond.h:
	* plugins/actions/errorchecking/mindisplaytime.h:
	* plugins/actions/errorchecking/mingapbetweensubtitles.h:
	* plugins/actions/errorchecking/overlapping.h:
	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	Fix bug #20214 : Checking CPS is named "Display time" (Patch by Tomáš Hnyk)

2015-04-25  kitone  <kitone@gna.org>

	* share/appdata/subtitleeditor.appdata.xml:
	Fix bug #22657 : Please install the supplied AppData file.

2015-04-25  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.ui:
	* plugins/actions/preferences/videoplayerpage.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Fix bug #23502 : Allow display of subtitles elsewhere but at the bottom.

2015-04-25  kitone  <kitone@gna.org>

	* src/gui/treeviewextensionmanager.cc:
	Fix bug #23508 : Make the preference dialog a bit wider, wrap text.

2015-04-25  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/dialog-spell-checking.ui:
	Remove deprecated widget.
